Add info to deploy to maven central

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,46 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dev.migwel</groupId>
+    <groupId>dev.migwel.javadeps</groupId>
     <artifactId>Javadeps</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <name>dev.migwel.javadeps.Javadeps</name>
+    <description>Java client library to call Adeps walks API</description>
+    <url>https://migwel.dev</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Miguel Gonzalez</name>
+            <email>blog@migwel.dev</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/migwel/javadeps.git</connection>
+        <developerConnection>scm:git:ssh://github.com:migwel/javadeps.git</developerConnection>
+        <url>https://github.com/migwel/javadeps/tree/master</url>
+    </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.jetbrains</groupId>
